--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,15 +9,15 @@ body {
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 20px;
-    border-top: 2px solid darkorange;
-    border-bottom: 2px solid darkorange;
+    border-top: 2px solid #fd9668;
+    border-bottom: 2px solid #fd9668;
 }
 .home-wrapper h2 {
     margin-bottom: 50px;
 }
 
 input:focus {
-    color: darkorange !important;
+    color: #fd9668 !important;
     transition: 200ms !important;
 }
 
@@ -28,10 +28,14 @@ button {
     outline: unset !important;
 }
 
+.btn {
+    padding: 7px 10px !important;
+    width: 50%;
+}
+
 .results-wrapper {
     width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin: 0 10% 80px 10%;
     display: flex;
     flex-wrap: wrap;
 }
@@ -39,12 +43,12 @@ button {
 .result-card {
     flex: 1 0 42%;
     margin: 2%;
-    height: 400px;
+    min-height: 350px;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 20px;
-    border-top: 2px solid darkorange;
-    border-bottom: 2px solid darkorange;
+    border-top: 2px solid #fd9668;
+    border-bottom: 2px solid #fd9668;
     text-align: center;
     justify-content: space-around;
     display: flex;
@@ -54,5 +58,29 @@ button {
 
 .result-card .img img {
     border-radius: 50%;
-    width: 200px;
+    width: 124px;
+}
+
+.result-card .img {
+    margin-bottom: 20px;
+}
+
+.result-card .login {
+    border-bottom: 1px solid rgba(99, 107, 111, 0.34);
+    margin-bottom: 50px;
+}
+
+.hidden {
+    display: none;
+}
+
+.show-btns {
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 0 37% 0 37%;
+    background-color: rgb(21, 21, 21);
+    z-index: 5;
 }
